Add bio syncing to plugin
